--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 azure-storage-blob==12.3.2
-Flask==1.1.2
+Flask
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
-pyodbc==4.0.30
+pyodbc
 SQLAlchemy==1.3.17
 Werkzeug==1.0.1
 WTForms==2.3.1
+MarkupSafe==2.0.1
